--- a/mmb_repo/templates/base.html
+++ b/mmb_repo/templates/base.html
@@ -146,33 +146,33 @@
                     <li>
                       <a href="genres.html">
                         <i class="icon-music-tone-alt icon text-info"></i>
-                        <span class="font-bold">Genres</span>
+                        <span class="font-bold">Music</span>
                       </a>
                     </li>
                     <li>
                       <a href="events.html">
                         <i class="icon-drawer icon text-primary-lter"></i>
                         <b class="badge bg-primary pull-right">6</b>
-                        <span class="font-bold">Events</span>
+                        <span class="font-bold">Musicians</span>
                       </a>
                     </li>
                     <li>
                       <a href="listen.html">
                         <i class="icon-list icon  text-info-dker"></i>
-                        <span class="font-bold">Listen</span>
+                        <span class="font-bold">Bands</span>
                       </a>
                     </li>
                     <li>
                       <a href="video.html" data-target="#content" data-el="#bjax-el" data-replace="true">
                         <i class="icon-social-youtube icon  text-primary"></i>
-                        <span class="font-bold">Video</span>
+                        <span class="font-bold">Videos</span>
                       </a>
                     </li>
                     <li class="m-b hidden-nav-xs"></li>
                   </ul>
                   <ul class="nav" data-ride="collapse">
                     <li class="hidden-nav-xs padder m-t m-b-sm text-xs text-muted">
-                      Interface
+                      My Favourites
                     </li>
                     <li >
                       <a href="#" class="auto">
@@ -182,7 +182,7 @@
                         </span>
                         <i class="icon-screen-desktop icon">
                         </i>
-                        <span>Layouts</span>
+                        <span>My likes</span>
                       </a>
                       <ul class="nav dk text-sm">
                         <li >
@@ -436,46 +436,7 @@
               </div>
             </section>
             
-            <footer class="footer hidden-xs no-padder text-center-nav-xs">
-              <div class="bg hidden-xs ">
-                  <div class="dropdown dropup wrapper-sm clearfix">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                      <span class="thumb-sm avatar pull-left m-l-xs">                        
-                        <img src="{% static 'images/a3.png' %}" class="dker' %}" alt="...">
-                        <i class="on b-black"></i>
-                      </span>
-                      <span class="hidden-nav-xs clear">
-                        <span class="block m-l">
-                          <strong class="font-bold text-lt">John.Smith</strong> 
-                          <b class="caret"></b>
-                        </span>
-                        <span class="text-muted text-xs block m-l">Art Director</span>
-                      </span>
-                    </a>
-                    <ul class="dropdown-menu animated fadeInRight aside text-left">                      
-                      <li>
-                        <span class="arrow bottom hidden-nav-xs"></span>
-                        <a href="#">Settings</a>
-                      </li>
-                      <li>
-                        <a href="profile.html">Profile</a>
-                      </li>
-                      <li>
-                        <a href="#">
-                          <span class="badge bg-danger pull-right">3</span>
-                          Notifications
-                        </a>
-                      </li>
-                      <li>
-                        <a href="docs.html">Help</a>
-                      </li>
-                      <li class="divider"></li>
-                      <li>
-                        <a href="modal.lockme.html" data-toggle="ajaxModal" >Logout</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>            </footer>
+            <footer class="footer hidden-xs no-padder text-center-nav-xs"></footer>
           </section>
         </aside>
         <!-- /.aside -->
