profile form etc

--- a/mmb_repo/templates/base.html
+++ b/mmb_repo/templates/base.html
@@ -3,7 +3,7 @@
 <html lang="en" class="app">
 <head>  
   <meta charset="utf-8" />
-  <title>Musik | Web Application</title>
+  <title>MakeMyBand - Musicians | Bands | Blogs</title>
   <meta name="description" content="app, web app, responsive, admin dashboard, admin, flat, flat ui, ui kit, off screen nav" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <link rel="stylesheet" href="{% static 'js/jPlayer/jplayer.flat.css' %}" type="text/css">
@@ -29,7 +29,7 @@
         <a href="index.html" class="navbar-brand text-lt">
           <i class="icon-earphones"></i>
           <img src="{% static 'images/logo.png' %}" alt="." class="hide">
-          <span class="hidden-nav-xs m-l-sm">Musik</span>
+          <span class="hidden-nav-xs m-l-sm">MakeMyBand</span>
         </a>
         <a class="btn btn-link visible-xs" data-toggle="dropdown" data-target=".user">
           <i class="icon-settings"></i>
