--- a/mmb_repo/templates/account/login.html
+++ b/mmb_repo/templates/account/login.html
@@ -1,4 +1,4 @@
-{% extends "account/base.html" %}
+{% extends "account/~base.html" %}
 {% load i18n %}
 {% load account %}
 {% load url from future %}
