--- a/mmb_repo/templates/users/profile_form.html
+++ b/mmb_repo/templates/users/profile_form.html
@@ -1,9 +1,17 @@
 {% extends "base.html" %}
 {% load static %}
 {% load crispy_forms_tags %}
-{% block title %}MMB{% endblock %}
+{% block title %}Profile{% endblock %}
 
 {% block content %}
-    {{ form|crispy }}
+
+    <form action="" method="post">
+    <form class="form-horizontal" method="post" action="{% url 'users:edit_profile' %}">
+        {% csrf_token %}
+        {{ form|crispy }}
+
+        <input type="submit" class="btn btn-primary" value="Update" />
+    </form>
+
 {% endblock content %}
 
