--- a/mmb_repo/templates/users/profile_form.html
+++ b/mmb_repo/templates/users/profile_form.html
@@ -1,17 +1,20 @@
 {% extends "base.html" %}
 {% load static %}
 {% load crispy_forms_tags %}
+{% load crispy_forms_tags %}
+
 {% block title %}Profile{% endblock %}
 
 {% block content %}
+    <div class="container">
+        <div class="col-md-8">
 
-    <form action="" method="post">
-    <form class="form-horizontal" method="post" action="{% url 'users:edit_profile' %}">
-        {% csrf_token %}
-        {{ form|crispy }}
+            {% crispy form  %}
+             <div class="hidden">{{ form.errors }}</div>
+        </div>
+    </div>
 
-        <input type="submit" class="btn btn-primary" value="Update" />
-    </form>
+
 
 {% endblock content %}
 
