--- a/mmb_repo/templates/account/login.html
+++ b/mmb_repo/templates/account/login.html
@@ -1,4 +1,4 @@
-{% extends "account/~base.html" %}
+{% extends "account/base.html" %}
 {% load i18n %}
 {% load account %}
 {% load url from future %}
@@ -7,26 +7,51 @@
 
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
-{% block login_content %}
-<a class="navbar-brand block" href="index.html"><span class="h1 font-bold">Musik</span></a>
+{% block customize_background %}
+<body class=" bg-info dker">
+{% endblock %}
+
+{% block vbox %}
+{% endblock %}
+
+{% block content %}
+
+<section id="content" class="m-t-lg wrapper-md animated fadeInUp">    
+    <div class="container aside-xl">
+      <a class="navbar-brand block" href="{% url 'home' %}"><span class="h1 font-bold">Make My Band</span></a>
       <section class="m-b-lg">
         <header class="wrapper text-center">
           <strong>Sign in to get in touch</strong>
         </header>
-        <form action="index.html">
+        <form action="{% url 'account_login' %}" method="POST">
+          {% csrf_token %}
+          {% if redirect_field_value %}
+            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+          {% endif %}
           <div class="form-group">
-            <input type="email" placeholder="Email" class="form-control rounded input-lg text-center no-border">
+            <input type="user" placeholder="Username" class="form-control rounded input-lg text-center no-border" name="login">
           </div>
           <div class="form-group">
-             <input type="password" placeholder="Password" class="form-control rounded input-lg text-center no-border">
+             <input type="password" placeholder="Password" name="password" class="form-control rounded input-lg text-center no-border">
           </div>
           <button type="submit" class="btn btn-lg btn-warning lt b-white b-2x btn-block btn-rounded"><i class="icon-arrow-right pull-right"></i><span class="m-r-n-lg">Sign in</span></button>
           <div class="text-center m-t m-b"><a href="#"><small>Forgot password?</small></a></div>
           <div class="line line-dashed"></div>
           <p class="text-muted text-center"><small>Do not have an account?</small></p>
-          <a href="signup.html" class="btn btn-lg btn-info btn-block rounded">Create an account</a>
+          <div class="form-group">
+            <a href="{% url 'account_signup' %}" class="btn btn-lg btn-info btn-block rounded">Create an account</a>
+          </div>
         </form>
+        
+        {% load socialaccount %}
+        {% providers_media_js %}
+
+         <div class="form-group">
+            <a href="{% provider_login_url "facebook" method="js_sdk" %}" class="btn btn-lg btn-info btn-block lt b-white b-2x rounded">Facebook Connect</a>
+         </div>
 
       </section>
-{% endblock %}
+    </div>
+  </section>
 
+{% endblock %}
