--- a/mmb_repo/templates/account/logout.html
+++ b/mmb_repo/templates/account/logout.html
@@ -5,7 +5,7 @@
 
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
-{% block login_content %}
+{% block content %}
 <div class="container">
   <div class="row">
     <div class="col-md-5">
