--- a/mmb_repo/templates/account/signup.html
+++ b/mmb_repo/templates/account/signup.html
@@ -6,7 +6,7 @@
 
 {% block title %}{% trans "Signup" %}{% endblock title %}
 
-{% block content %}
+{% block content1 %}
 <h1>{% trans "Sign Up" %}</h1>
 
 <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
@@ -24,5 +24,59 @@
 {% providers_media_js %}
 <a href="{% provider_login_url "facebook" method="js_sdk" %}">Facebook Connect</a>
 
-{% endblock content %}
+{% endblock content1 %}
 
+{% block customize_background %}
+<body class=" bg-info dker">
+{% endblock %}
+
+{% block vbox %}
+{% endblock %}
+
+
+{% block content %}
+
+<section id="content" class="m-t-lg wrapper-md animated fadeInDown">
+    <div class="container aside-xl">
+      <a class="navbar-brand block" href="{% url 'home' %}"><span class="h1 font-bold">Make My Band</span></a>
+      <section class="m-b-lg">
+        <header class="wrapper text-center">
+          <strong>Sign up to find interesting thing</strong>
+        </header>
+        <form action="{% url 'account_signup' %}" method="POST">
+        	{% csrf_token %}
+        	{% if redirect_field_value %}
+			  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+			{% endif %}
+          <div class="form-group">
+            <input placeholder="Username" class="form-control rounded input-lg text-center no-border" name="username">
+          </div>
+          <div class="form-group">
+            <input type="email" placeholder="Email" class="form-control rounded input-lg text-center no-border" name="email">
+          </div>
+          <div class="form-group">
+             <input type="password" placeholder="Password" class="form-control rounded input-lg text-center no-border" name="password1">
+          </div>
+          <div class="form-group">
+             <input type="password" placeholder="Confirm Password" class="form-control rounded input-lg text-center no-border" name="password2">
+          </div>
+          <div class="checkbox i-checks m-b">
+            <label class="m-l">
+              <input type="checkbox" checked=""><i></i> Agree the <a href="#">terms and policy</a>
+            </label>
+          </div>
+          <button type="submit" class="btn btn-lg btn-warning lt b-white b-2x btn-block btn-rounded"><i class="icon-arrow-right pull-right"></i><span class="m-r-n-lg">Sign up</span></button>
+          <div class="line line-dashed"></div>
+          <p class="text-muted text-center"><small>Already have an account?</small></p>
+         <div class="form-group">
+         	 <a href="{% url 'account_login' %}" class="btn btn-lg btn-info btn-block btn-rounded">Sign in</a>
+         </div>
+        </form>
+		{% load socialaccount %}
+		{% providers_media_js %}
+		<a href="{% provider_login_url "facebook" method="js_sdk" %}" class="btn btn-lg btn-info btn-block btn-rounded lt b-white b-2x">Facebook Connect</a>
+      </section>
+    </div>
+  </section>
+
+{% endblock %}
