redirected to edit profile and removed email confirmation if social authentication

--- a/mmb_repo/templates/users/profile.html
+++ b/mmb_repo/templates/users/profile.html
@@ -18,7 +18,7 @@
                         <img src="images/a0.png" class="img-circle">
                       </a>
                       <div>
-                        <div class="h3 m-t-xs m-b-xs">Ajay Singh</div>
+                        <div class="h3 m-t-xs m-b-xs">{{ account.user }}</div>
                         <small class="text-muted"><i class="fa fa-map-marker"></i> Narela, Delhi</small>
                       </div>
                     </div>
