--- a/mmb_repo/templates/users/profile_form.html
+++ b/mmb_repo/templates/users/profile_form.html
@@ -8,9 +8,12 @@
 {% block content %}
     <div class="container">
         <div class="col-md-8">
-
+            {% crispy userform  %}
+            <div class="hidden">{{ userform.errors }}</div>
+        </div>
+        <div class="col-md-8">
             {% crispy form  %}
-             <div class="hidden">{{ form.errors }}</div>
+            <div class="hidden">{{ form.errors }}</div>
         </div>
     </div>
 
