logout link active

--- a/mmb_repo/templates/base.html
+++ b/mmb_repo/templates/base.html
@@ -123,7 +123,7 @@
               </li>
               <li class="divider"></li>
               <li>
-                <a href="modal.lockme.html" data-toggle="ajaxModal" >Logout</a>
+                <a href="/accounts/logout" data-toggle="ajaxModal" >Logout</a>
               </li>
             </ul>
           </li>
