--- a/mmb_repo/templates/users/profile.html
+++ b/mmb_repo/templates/users/profile.html
@@ -18,8 +18,8 @@
                         <img src="images/a0.png" class="img-circle">
                       </a>
                       <div>
-                        <div class="h3 m-t-xs m-b-xs">{{ account.user }}</div>
-                        <small class="text-muted"><i class="fa fa-map-marker"></i> Narela, Delhi</small>
+                        <div class="h3 m-t-xs m-b-xs">{{ user.first_name}} {{ user.last_name }}</div>
+                        <small class="text-muted"><i class="fa fa-map-marker"></i>{{ details.current_city }}</small>
                       </div>
                     </div>
                     <div class="panel wrapper">
@@ -53,11 +53,11 @@
                     </div>
                     <div>
                       <small class="text-uc text-xs text-muted">about me</small>
-                      <p>Joker</p>
+                      <p>{{ details.about_me }}</p>
                       <small class="text-uc text-xs text-muted">info</small>
                       <p>A developer... developing makemyband using django. Like gymming, coding. Used to play football and counter strike. learning TT and snooker.</p>
                       <div class="line"></div>
-                      <small class="text-uc text-xs text-muted">connect to me :</small>
+                      <small class="text-uc text-xs text-muted">connect to me : {{ details.phone }}</small>
                       <p class="m-t-sm">
                         <a href="#" class="btn btn-rounded btn-twitter btn-icon"><i class="fa fa-twitter"></i></a>
                         <a href="#" class="btn btn-rounded btn-facebook btn-icon"><i class="fa fa-facebook"></i></a>
