--- a/mmb_repo/templates/account/login.html
+++ b/mmb_repo/templates/account/login.html
@@ -37,7 +37,7 @@
           <button type="submit" class="btn btn-lg btn-warning lt b-white b-2x btn-block btn-rounded"><i class="icon-arrow-right pull-right"></i><span class="m-r-n-lg">Sign in</span></button>
           <div class="text-center m-t m-b"><a href="#"><small>Forgot password?</small></a></div>
           <div class="line line-dashed"></div>
-          <p class="text-muted text-center"><small>Do not have an account?</small></p>
+            <small>Do not have an account?</small></p>
           <div class="form-group">
             <a href="{% url 'account_signup' %}" class="btn btn-lg btn-info btn-block rounded">Create an account</a>
           </div>
