google login link and index url

--- a/mmb_repo/templates/base.html
+++ b/mmb_repo/templates/base.html
@@ -30,7 +30,7 @@
         <a class="btn btn-link visible-xs" data-toggle="class:nav-off-screen,open" data-target="#nav,html">
           <i class="icon-list"></i>
         </a>
-        <a href="index.html" class="navbar-brand text-lt">
+        <a href="/index" class="navbar-brand text-lt">
           <i class="icon-earphones"></i>
           <img src="{% static 'images/logo.png' %}" alt="." class="hide">
           <span class="hidden-nav-xs m-l-sm">MakeMyBand</span>
