--- a/mmb_repo/templates/base.html
+++ b/mmb_repo/templates/base.html
@@ -140,7 +140,7 @@
                   <span class="thumb-sm avatar pull-right m-t-n-sm m-b-n-sm m-l-sm">
                     <img src="{% static 'images/a0.png' %}" alt="...">
                   </span>
-                  Guest User <b class="caret"></b>
+                  {{request.user}} <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu animated fadeInRight">            
                   <li>
