--- a/mmb_repo/templates/users/profile_form.html
+++ b/mmb_repo/templates/users/profile_form.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="col-md-8">
             {% crispy form  %}
-            <div class="hidden">{{ form.errors }}</div>
+<div id='form-errors'>{{ form_errors }}</div>
         </div>
     </div>
 
