--- a/mmb_repo/templates/base.html
+++ b/mmb_repo/templates/base.html
@@ -12,7 +12,9 @@
   <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}" type="text/css">
   <link rel="stylesheet" href="{% static 'css/simple-line-icons.css' %}" type="text/css">
   <link rel="stylesheet" href="{% static 'css/font.css' %}" type="text/css">
-  <link rel="stylesheet" href="{% static 'css/app.css' %}" type="text/css">  
+  <link rel="stylesheet" href="{% static 'css/app.css' %}" type="text/css">
+
+
     <!--[if lt IE 9]>
     <script src=" {% static 'js/ie/html5shiv.js' %}"></script>
     <script src=" {% static 'js/ie/respond.min.js' %}"></script>
@@ -507,5 +509,6 @@
   <script type="text/javascript" src=" {% static 'js/jPlayer/jquery.jplayer.min.js' %}"></script>
   <script type="text/javascript" src=" {% static 'js/jPlayer/add-on/jplayer.playlist.min.js' %}"></script>
   <script type="text/javascript" src=" {% static 'js/jPlayer/demo.js' %}"></script>
+  <script type="text/javascript" src=" {% static 'js/chosen.jquery.min.js' %}"></script>
 </body>
 </html>
