--- a/mmb_repo/templates/users/profile_form.html
+++ b/mmb_repo/templates/users/profile_form.html
@@ -6,6 +6,10 @@
 {% block title %}Profile{% endblock %}
 
 {% block content %}
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <link rel="stylesheet" href="{% static 'css/chosen.min.css' %}" type="text/css">
+
+
     <ul id="tabs" class="nav nav-tabs">
         <li class={{ edit_profile }}><a href="/users/edit-profile">Edit Profile</a></li>
         <li class={{ change_password }}><a href="/users/change-password">Change Password</a></li>
@@ -16,8 +20,12 @@
 <div id='form-errors'>{{ form_errors }}</div>
         </div>
     </div>
+     <script>
+        $(document).ready(function() {
+            $(".genre").chosen({search_contains:true});
+            $(".instrument").chosen({search_contains:true});
+        }); // end of document.ready
 
-
-
+    </script>
 {% endblock content %}
 
