--- a/mmb_repo/templates/account/login.html
+++ b/mmb_repo/templates/account/login.html
@@ -23,25 +23,25 @@
         <header class="wrapper text-center">
           <strong>Sign in to get in touch</strong>
         </header>
-        <form action="{% url 'account_login' %}" method="POST">
-          {% csrf_token %}
-          {% if redirect_field_value %}
-            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-          {% endif %}
-          <div class="form-group">
-            <input type="user" placeholder="Username" class="form-control rounded input-lg text-center no-border" name="login">
-          </div>
-          <div class="form-group">
-             <input type="password" placeholder="Password" name="password" class="form-control rounded input-lg text-center no-border">
-          </div>
-          <button type="submit" class="btn btn-lg btn-warning lt b-white b-2x btn-block btn-rounded"><i class="icon-arrow-right pull-right"></i><span class="m-r-n-lg">Sign in</span></button>
-          <div class="text-center m-t m-b"><a href="#"><small>Forgot password?</small></a></div>
-          <div class="line line-dashed"></div>
-            <small>Do not have an account?</small></p>
-          <div class="form-group">
-            <a href="{% url 'account_signup' %}" class="btn btn-lg btn-info btn-block rounded">Create an account</a>
-          </div>
-        </form>
+       <!--  <form action="{% url 'account_login' %}" method="POST">
+         {% csrf_token %}
+         {% if redirect_field_value %}
+           <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+         {% endif %}
+         <div class="form-group">
+           <input type="user" placeholder="Username" class="form-control rounded input-lg text-center no-border" name="login">
+         </div>
+         <div class="form-group">
+            <input type="password" placeholder="Password" name="password" class="form-control rounded input-lg text-center no-border">
+         </div>
+         <button type="submit" class="btn btn-lg btn-warning lt b-white b-2x btn-block btn-rounded"><i class="icon-arrow-right pull-right"></i><span class="m-r-n-lg">Sign in</span></button>
+         <div class="text-center m-t m-b"><a href="#"><small>Forgot password?</small></a></div>
+         <div class="line line-dashed"></div>
+           <small>Do not have an account?</small></p>
+         <div class="form-group">
+           <a data-toggle = "ajaxModal" href="{% url 'account_signup' %}" class="btn btn-lg btn-info btn-block rounded">Create an account</a>
+         </div>
+       </form> -->
         
         {% load socialaccount %}
         {% providers_media_js %}
