--- a/mmb_repo/templates/account/login.html
+++ b/mmb_repo/templates/account/login.html
@@ -47,7 +47,7 @@
         {% providers_media_js %}
 
          <div class="form-group">
-            <a href="{% provider_login_url "facebook" method="js_sdk" %}" class="btn btn-lg btn-info btn-block lt b-white b-2x rounded">Facebook Connect</a>
+            <a href="{% provider_login_url 'facebook' method='js_sdk' %}" class="btn btn-lg btn-info btn-block lt b-white b-2x rounded">Facebook Connect</a>
          </div>
          <div class="form-group">
             <a href="/accounts/google/login/?process=login" class="btn btn-lg btn-info btn-block lt b-white b-2x rounded socialaccount_provider google" title="Google">Google</a>
