--- a/mmb_repo/templates/users/profile.html
+++ b/mmb_repo/templates/users/profile.html
@@ -15,7 +15,7 @@
                   <div class="wrapper">
                     <div class="text-center m-b m-t">
                       <a href="#" class="thumb-lg">
-                        <img src="{{ STATIC_URL }}images/{{ user.pk }}.jpg" class="img-circle">
+                        <img src="{{ STATIC_URL }}images/profile/{{ user.pk }}" class="img-circle">
                       </a>
                       <div>
                         <div class="h3 m-t-xs m-b-xs">{{ user.first_name }} {{ user.last_name }}</div>
