add try/catch, navigation, login fix and redundant code removal

--- a/mmb_repo/templates/account/base.html
+++ b/mmb_repo/templates/account/base.html
@@ -1,2 +1,6 @@
 {% extends "base.html" %}
-{% block title %}{% block head_title %}{% endblock head_title %}{% endblock title %}
+{% block title %}
+    {% block head_title %}
+
+    {% endblock head_title %}
+{% endblock title %}
