--- a/mmb_repo/templates/base.html
+++ b/mmb_repo/templates/base.html
@@ -64,9 +64,7 @@
         </div>
       </form>
       
-
       <!-- to be shown when user is logged in -->
-
       {% if request.user.is_authenticated %}
       <div class="navbar-right ">
         <ul class="nav navbar-nav m-n hidden-xs nav-user user">
@@ -114,10 +112,10 @@
             <ul class="dropdown-menu animated fadeInRight">            
               <li>
                 <span class="arrow top"></span>
-                <a href="#">Settings</a>
+                <a href="{% url 'users:edit_profile' %}">Settings</a>
               </li>
               <li>
-                <a href="profile.html">Profile</a>
+                <a href="{% url 'users:view_profile' request.user %}">Profile</a>
               </li>
               <li>
                 <a href="#">
@@ -130,7 +128,7 @@
               </li>
               <li class="divider"></li>
               <li>
-                <a href="/accounts/logout" data-toggle="ajaxModal" >Logout</a>
+                <a href="{% url 'account_logout' %}" data-toggle="ajaxModal" >Logout</a>
               </li>
             </ul>
           </li>
@@ -146,7 +144,7 @@
                   </span>
                   {{request.user}} <b class="caret"></b>
                 </a>
-                <ul class="dropdown-menu animated fadeInRight">            
+                <ul class="dropdown-menu animated fadeInRight">
                   <li>
                     <span class="arrow top"></span>
                     <a href="{% url 'account_signup' %}">Sign Up</a>
@@ -154,16 +152,16 @@
                   <li>
                     <a href="{% url 'account_login' %}">Sign In</a>
                   </li>
-                 
+
                   <li>
                     <a href="docs.html">Help</a>
                   </li>
-                  
-                  
+
+
                 </ul>
-            </li> 
+            </li>
             </ul> -->
-           
+
               <div class="form-group">
                 <div class="input-group">
                  <!-- <input id = "search" type="text" class="form-control input-sm no-border rounded" placeholder="Search songs, albums..."> -->
@@ -172,9 +170,9 @@
                   </div>
                 </div>
               </div>
-        
-           
-            </div> 
+
+
+            </div>
 
 
       {% endif %}
@@ -189,7 +187,7 @@
           <section class="vbox">
             <section class="w-f-md scrollable">
               <div class="slim-scroll" data-height="auto" data-disable-fade-out="true" data-distance="0" data-size="10px" data-railOpacity="0.2">
-                
+
 
 
                 <!-- nav -->                 
