--- a/mmb_repo/templates/users/profile.html
+++ b/mmb_repo/templates/users/profile.html
@@ -107,90 +107,92 @@
 {#                      <img class="img-full" src="images/m43.jpg" alt="...">#}
 {#                    </div>#}
                     <ul class="list-group list-group-lg no-radius no-border no-bg m-t-n-xxs m-b-none auto">
-                      <li class="list-group-item">
-                        <div class="pull-right m-l">
-                          <a href="#" class="m-r-sm"><i class="icon-cloud-download"></i></a>
-                          <a href="#"><i class="icon-plus"></i></a>
-                        </div>
-                        <a href="#" class="jp-play-me m-r-sm pull-left">
-                          <i class="icon-control-play text"></i>
-                          <i class="icon-control-pause text-active"></i>
-                        </a>
-                        <div class="clear text-ellipsis">
-                          <span>Vestibulum id ligula porta</span>
-                          <span class="text-muted"> -- 04:15</span>
-                        </div>
-                      </li>
-                      <li class="list-group-item">
-                        <div class="pull-right m-l">
-                          <a href="#" class="m-r-sm"><i class="icon-cloud-download"></i></a>
-                          <a href="#"><i class="icon-plus"></i></a>
-                        </div>
-                        <a href="#" class="jp-play-me m-r-sm pull-left">
-                          <i class="icon-control-play text"></i>
-                          <i class="icon-control-pause text-active"></i>
-                        </a>
-                        <div class="clear text-ellipsis">
-                          <span>Praesent commodo cursus magna</span>
-                          <span class="text-muted"> -- 02:25</span>
-                        </div>
-                      </li>
-                      <li class="list-group-item">
-                        <div class="pull-right m-l">
-                          <a href="#" class="m-r-sm"><i class="icon-cloud-download"></i></a>
-                          <a href="#"><i class="icon-plus"></i></a>
-                        </div>
-                        <a href="#" class="jp-play-me m-r-sm pull-left">
-                          <i class="icon-control-play text"></i>
-                          <i class="icon-control-pause text-active"></i>
-                        </a>
-                        <div class="clear text-ellipsis">
-                          <span>Curabitur blandit tempus</span>
-                          <span class="text-muted"> -- 05:00</span>
-                        </div>
-                      </li>
-                      <li class="list-group-item">
-                        <div class="pull-right m-l">
-                          <a href="#" class="m-r-sm"><i class="icon-cloud-download"></i></a>
-                          <a href="#"><i class="icon-plus"></i></a>
-                        </div>
-                        <a href="#" class="jp-play-me m-r-sm pull-left">
-                          <i class="icon-control-play text"></i>
-                          <i class="icon-control-pause text-active"></i>
-                        </a>
-                        <div class="clear text-ellipsis">
-                          <span>Faucibus dolor auctor</span>
-                          <span class="text-muted"> -- 03:50</span>
-                        </div>
-                      </li>
-                      <li class="list-group-item">
-                        <div class="pull-right m-l">
-                          <a href="#" class="m-r-sm"><i class="icon-cloud-download"></i></a>
-                          <a href="#"><i class="icon-plus"></i></a>
-                        </div>
-                        <a href="#" class="jp-play-me m-r-sm pull-left">
-                          <i class="icon-control-play text"></i>
-                          <i class="icon-control-pause text-active"></i>
-                        </a>
-                        <div class="clear text-ellipsis">
-                          <span>Get lacinia odio sem nec elit cibus dolor auctor sed odio dui mollis ornare</span>
-                          <span class="text-muted"> -- 04:05</span>
-                        </div>
-                      </li>
-                      <li class="list-group-item">
-                        <div class="pull-right m-l">
-                          <a href="#" class="m-r-sm"><i class="icon-cloud-download"></i></a>
-                          <a href="#"><i class="icon-plus"></i></a>
-                        </div>
-                        <a href="#" class="jp-play-me m-r-sm pull-left">
-                          <i class="icon-control-play text"></i>
-                          <i class="icon-control-pause text-active"></i>
-                        </a>
-                        <div class="clear text-ellipsis">
-                          <span>Urna mollis ornare vel eu leo</span>
-                          <span class="text-muted"> -- 05:10</span>
-                        </div>
-                      </li>
+                        {% for songs in playlist %}
+                              <li class="list-group-item">
+                                <div class="pull-right m-l">
+                                  <a href="#" class="m-r-sm"><i class="icon-cloud-download"></i></a>
+                                  <a href="#"><i class="icon-plus"></i></a>
+                                </div>
+                                <a href="#" class="jp-play-me m-r-sm pull-left">
+                                  <i class="icon-control-play text"></i>
+                                  <i class="icon-control-pause text-active"></i>
+                                </a>
+                                <div class="clear text-ellipsis">
+                                  <span>{{ songs.name }}</span>
+                                  <span class="text-muted"> -- 04:15</span>
+                                </div>
+                              </li>
+                        {% endfor %}
+{#                      <li class="list-group-item">#}
+{#                        <div class="pull-right m-l">#}
+{#                          <a href="#" class="m-r-sm"><i class="icon-cloud-download"></i></a>#}
+{#                          <a href="#"><i class="icon-plus"></i></a>#}
+{#                        </div>#}
+{#                        <a href="#" class="jp-play-me m-r-sm pull-left">#}
+{#                          <i class="icon-control-play text"></i>#}
+{#                          <i class="icon-control-pause text-active"></i>#}
+{#                        </a>#}
+{#                        <div class="clear text-ellipsis">#}
+{#                          <span>Praesent commodo cursus magna</span>#}
+{#                          <span class="text-muted"> -- 02:25</span>#}
+{#                        </div>#}
+{#                      </li>#}
+{#                      <li class="list-group-item">#}
+{#                        <div class="pull-right m-l">#}
+{#                          <a href="#" class="m-r-sm"><i class="icon-cloud-download"></i></a>#}
+{#                          <a href="#"><i class="icon-plus"></i></a>#}
+{#                        </div>#}
+{#                        <a href="#" class="jp-play-me m-r-sm pull-left">#}
+{#                          <i class="icon-control-play text"></i>#}
+{#                          <i class="icon-control-pause text-active"></i>#}
+{#                        </a>#}
+{#                        <div class="clear text-ellipsis">#}
+{#                          <span>Curabitur blandit tempus</span>#}
+{#                          <span class="text-muted"> -- 05:00</span>#}
+{#                        </div>#}
+{#                      </li>#}
+{#                      <li class="list-group-item">#}
+{#                        <div class="pull-right m-l">#}
+{#                          <a href="#" class="m-r-sm"><i class="icon-cloud-download"></i></a>#}
+{#                          <a href="#"><i class="icon-plus"></i></a>#}
+{#                        </div>#}
+{#                        <a href="#" class="jp-play-me m-r-sm pull-left">#}
+{#                          <i class="icon-control-play text"></i>#}
+{#                          <i class="icon-control-pause text-active"></i>#}
+{#                        </a>#}
+{#                        <div class="clear text-ellipsis">#}
+{#                          <span>Faucibus dolor auctor</span>#}
+{#                          <span class="text-muted"> -- 03:50</span>#}
+{#                        </div>#}
+{#                      </li>#}
+{#                      <li class="list-group-item">#}
+{#                        <div class="pull-right m-l">#}
+{#                          <a href="#" class="m-r-sm"><i class="icon-cloud-download"></i></a>#}
+{#                          <a href="#"><i class="icon-plus"></i></a>#}
+{#                        </div>#}
+{#                        <a href="#" class="jp-play-me m-r-sm pull-left">#}
+{#                          <i class="icon-control-play text"></i>#}
+{#                          <i class="icon-control-pause text-active"></i>#}
+{#                        </a>#}
+{#                        <div class="clear text-ellipsis">#}
+{#                          <span>Get lacinia odio sem nec elit cibus dolor auctor sed odio dui mollis ornare</span>#}
+{#                          <span class="text-muted"> -- 04:05</span>#}
+{#                        </div>#}
+{#                      </li>#}
+{#                      <li class="list-group-item">#}
+{#                        <div class="pull-right m-l">#}
+{#                          <a href="#" class="m-r-sm"><i class="icon-cloud-download"></i></a>#}
+{#                          <a href="#"><i class="icon-plus"></i></a>#}
+{#                        </div>#}
+{#                        <a href="#" class="jp-play-me m-r-sm pull-left">#}
+{#                          <i class="icon-control-play text"></i>#}
+{#                          <i class="icon-control-pause text-active"></i>#}
+{#                        </a>#}
+{#                        <div class="clear text-ellipsis">#}
+{#                          <span>Urna mollis ornare vel eu leo</span>#}
+{#                          <span class="text-muted"> -- 05:10</span>#}
+{#                        </div>#}
+{#                      </li>#}
                     </ul>
                   </section>
 {#                </section>#}
