--- a/mmb_repo/templates/pages/home.html
+++ b/mmb_repo/templates/pages/home.html
@@ -628,74 +628,7 @@
             </div>
           </div>
         </section>
-        <footer class="footer bg-dark">
-          <div id="jp_container_N">
-            <div class="jp-type-playlist">
-              <div id="jplayer_N" class="jp-jplayer hide"></div>
-              <div class="jp-gui">
-                <div class="jp-video-play hide">
-                  <a class="jp-video-play-icon">play</a>
-                </div>
-                <div class="jp-interface">
-                  <div class="jp-controls">
-                    <div><a class="jp-previous"><i class="icon-control-rewind i-lg"></i></a></div>
-                    <div>
-                      <a class="jp-play"><i class="icon-control-play i-2x"></i></a>
-                      <a class="jp-pause hid"><i class="icon-control-pause i-2x"></i></a>
-                    </div>
-                    <div><a class="jp-next"><i class="icon-control-forward i-lg"></i></a></div>
-                    <div class="hide"><a class="jp-stop"><i class="fa fa-stop"></i></a></div>
-                    <div><a class="" data-toggle="dropdown" data-target="#playlist"><i class="icon-list"></i></a></div>
-                    <div class="jp-progress hidden-xs">
-                      <div class="jp-seek-bar dk">
-                        <div class="jp-play-bar bg-info">
-                        </div>
-                        <div class="jp-title text-lt">
-                          <ul>
-                            <li></li>
-                          </ul>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="hidden-xs hidden-sm jp-current-time text-xs text-muted"></div>
-                    <div class="hidden-xs hidden-sm jp-duration text-xs text-muted"></div>
-                    <div class="hidden-xs hidden-sm">
-                      <a class="jp-mute" title="mute"><i class="icon-volume-2"></i></a>
-                      <a class="jp-unmute hid" title="unmute"><i class="icon-volume-off"></i></a>
-                    </div>
-                    <div class="hidden-xs hidden-sm jp-volume">
-                      <div class="jp-volume-bar dk">
-                        <div class="jp-volume-bar-value lter"></div>
-                      </div>
-                    </div>
-                    <div>
-                      <a class="jp-shuffle" title="shuffle"><i class="icon-shuffle text-muted"></i></a>
-                      <a class="jp-shuffle-off hid" title="shuffle off"><i class="icon-shuffle text-lt"></i></a>
-                    </div>
-                    <div>
-                      <a class="jp-repeat" title="repeat"><i class="icon-loop text-muted"></i></a>
-                      <a class="jp-repeat-off hid" title="repeat off"><i class="icon-loop text-lt"></i></a>
-                    </div>
-                    <div class="hide">
-                      <a class="jp-full-screen" title="full screen"><i class="fa fa-expand"></i></a>
-                      <a class="jp-restore-screen" title="restore screen"><i class="fa fa-compress text-lt"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="jp-playlist dropup" id="playlist">
-                <ul class="dropdown-menu aside-xl dker">
-                  <!-- The method Playlist.displayPlaylist() uses this unordered list -->
-                  <li class="list-group-item"></li>
-                </ul>
-              </div>
-              <div class="jp-no-solution hide">
-                <span>Update Required</span>
-                To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
-              </div>
-            </div>
-          </div>
-        </footer>
+
       </section>
     </section>
     <!-- side content -->
@@ -826,19 +759,19 @@
             </li>
           </ul>
         </section>
-        <footer class="footer footer-md bg-black">
-          <form class="" role="search">
-            <div class="form-group clearfix m-b-none">
-              <div class="input-group m-t m-b">
-                <span class="input-group-btn">
-                  <button type="submit" class="btn btn-sm bg-empty text-muted btn-icon"><i class="fa fa-search"></i></button>
-                </span>
-                <input type="text" class="form-control input-sm text-white bg-empty b-b b-dark no-border" placeholder="Search members">
-              </div>
-            </div>
-          </form>
-        </footer>
-      </section>              
+{#        <footer class="footer footer-md bg-black">#}
+{#          <form class="" role="search">#}
+{#            <div class="form-group clearfix m-b-none">#}
+{#              <div class="input-group m-t m-b">#}
+{#                <span class="input-group-btn">#}
+{#                  <button type="submit" class="btn btn-sm bg-empty text-muted btn-icon"><i class="fa fa-search"></i></button>#}
+{#                </span>#}
+{#                <input type="text" class="form-control input-sm text-white bg-empty b-b b-dark no-border" placeholder="Search members">#}
+{#              </div>#}
+{#            </div>#}
+{#          </form>#}
+{#        </footer>#}
+      </section>
     </aside>
     <!-- / side content -->
   </section>
