add to playlist button working and toggling

--- a/mmb_repo/templates/pages/home.html
+++ b/mmb_repo/templates/pages/home.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="padder-v">
                   <a href="#" class="text-ellipsis">Teri Aankho ki ye Kahani</a>
-                  <a href="#" class="text-ellipsis text-xs text-muted">Naveen Khatri</a>
+                  <a href="#" class="text-ellipsis text-xs text-muted">Naveen</a>
                 </div>
               </div>
             </div>
