update song like count

--- a/mmb_repo/templates/pages/home.html
+++ b/mmb_repo/templates/pages/home.html
@@ -39,7 +39,7 @@
                         <i class="fa fa-plus-circle text"></i>
                         <i class="fa fa-check-circle text-active text-info"></i>
                       </a>
-                      <span class="pull-right badge bg-white">12</span>
+                      <span id='like_count_1' class="pull-right badge bg-white">12</span>
 
                     </div>
                   </div>
