player and nav fix

--- a/mmb_repo/templates/base.html
+++ b/mmb_repo/templates/base.html
@@ -32,7 +32,7 @@
 {% block vbox %}
   <section class="vbox">
     <header class="bg-white-only header header-md navbar navbar-fixed-top-xs">
-      <div class="navbar-header aside bg-info nav-xs">
+      <div class="navbar-header aside bg-info ">
         <a class="btn btn-link visible-xs" data-toggle="class:nav-off-screen,open" data-target="#nav,html">
           <i class="icon-list"></i>
         </a>
@@ -46,7 +46,7 @@
         </a>
       </div>      <ul class="nav navbar-nav hidden-xs">
         <li>
-          <a href="#nav,.navbar-header" data-toggle="class:nav-xs,nav-xs" class="text-muted">
+          <a href="#nav,.navbar-header" data-toggle="class:nav-xs" class="text-muted">
             <i class="fa fa-indent text"></i>
             <i class="fa fa-dedent text-active"></i>
           </a>
@@ -186,7 +186,7 @@
     <section>
       <section class="hbox stretch">
         <!-- .aside -->
-        <aside class="bg-black dk nav-xs aside hidden-print" id="nav">          
+        <aside class="bg-black dk  aside hidden-print" id="nav">
           <section class="vbox">
             <section class="w-f-md scrollable">
               <div class="slim-scroll" data-height="auto" data-disable-fade-out="true" data-distance="0" data-size="10px" data-railOpacity="0.2">
