update band models and makemyband link

--- a/mmb_repo/templates/base.html
+++ b/mmb_repo/templates/base.html
@@ -66,7 +66,9 @@
           </div>
         </div>
       </form>
-      
+      <div class="navbar-brand">
+          <a href="#" class="btn btn-s-md btn-info">MakeMyBand</a>
+      </div>
       <!-- to be shown when user is logged in -->
       {% if request.user.is_authenticated %}
       <div class="navbar-right ">
