--- a/mmb_repo/templates/pages/home.html
+++ b/mmb_repo/templates/pages/home.html
@@ -30,10 +30,14 @@
                         <i class="icon-control-pause i-2x text-active"></i>
                       </a>
                     </div>
-                    <div class="bottom padder m-b-sm">
-                      <a href="#" class="pull-right active" id="audio_1">
+                   <div class="bottom padder m-b-sm">
+                      <a href="#" class="pull-right active like" id="1">
                         <i class="fa fa-heart-o"></i>
 {#                        <i class="fa fa-heart text-active text-danger"></i>#}
+                      </a>
+                      <a href="#" class="pull-right active unlike" id="1">
+                        <!--<i class="fa fa-heart-o"></i>-->
+                        <i class="fa fa-heart text-active text-danger"></i>
                       </a>
                       <a href="#" data-toggle="class">
                         <i class="fa fa-plus-circle text"></i>
